@@ -19,9 +19,12 @@ package org.springframework.core.io.support;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.net.URL;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -98,18 +101,108 @@ class PathMatchingResourcePatternResolverTests {
 			}
 
 			@Test
-			void usingFileProtocol() {
-				Path testResourcesDir = Path.of("src/test/resources").toAbsolutePath();
-				String pattern = "file:%s/scanned-resources/**".formatted(testResourcesDir);
-				String pathPrefix = ".+scanned-resources/";
+			void usingClasspathStarProtocolWithWildcardInPatternAndNotEndingInSlash() throws Exception {
+				String pattern = "classpath*:org/springframework/core/io/sup*";
+				String pathPrefix = ".+org/springframework/core/io/";
 
+				List<String> actualSubPaths = getSubPathsIgnoringClassFilesEtc(pattern, pathPrefix);
+
+				// We DO find "support" if the pattern does NOT end with a slash.
+				assertThat(actualSubPaths).containsExactly("support");
+			}
+
+			@Test
+			void usingFileProtocolWithWildcardInPatternAndNotEndingInSlash() throws Exception {
+				Path testResourcesDir = Paths.get("src/test/resources").toAbsolutePath();
+				String pattern = String.format("file:%s/org/springframework/core/io/sup*", testResourcesDir);
+				String pathPrefix = ".+org/springframework/core/io/";
+
+				List<String> actualSubPaths = getSubPathsIgnoringClassFilesEtc(pattern, pathPrefix);
+
+				// We DO find "support" if the pattern does NOT end with a slash.
+				assertThat(actualSubPaths).containsExactly("support");
+			}
+
+			@Test
+			void usingClasspathStarProtocolWithWildcardInPatternAndEndingInSlash() throws Exception {
+				String pattern = "classpath*:org/springframework/core/io/sup*/";
+				String pathPrefix = ".+org/springframework/core/io/";
+
+				List<String> actualSubPaths = getSubPathsIgnoringClassFilesEtc(pattern, pathPrefix);
+
+				URL url = getClass().getClassLoader().getResource("org/springframework/core/io/support/EncodedResource.class");
+				if (!url.getProtocol().equals("jar")) {
+					// We do NOT find "support" if the pattern ENDS with a slash if org/springframework/core/io/support
+					// is in the local file system.
+					assertThat(actualSubPaths).isEmpty();
+				}
+				else {
+					// But we do find "support/" if org/springframework/core/io/support is found in a JAR on the classpath.
+					assertThat(actualSubPaths).containsExactly("support/");
+				}
+			}
+
+			@Test
+			void usingFileProtocolWithWildcardInPatternAndEndingInSlash() throws Exception {
+				Path testResourcesDir = Paths.get("src/test/resources").toAbsolutePath();
+				String pattern = String.format("file:%s/org/springframework/core/io/sup*/", testResourcesDir);
+				String pathPrefix = ".+org/springframework/core/io/";
+
+				List<String> actualSubPaths = getSubPathsIgnoringClassFilesEtc(pattern, pathPrefix);
+
+				// We do NOT find "support" if the pattern ENDS with a slash.
+				assertThat(actualSubPaths).isEmpty();
+			}
+
+			@Test
+			void usingClasspathStarProtocolWithWildcardInPatternAndEndingWithSuffixPattern() throws Exception {
+				String pattern = "classpath*:org/springframework/core/io/sup*/*.txt";
+				String pathPrefix = ".+org/springframework/core/io/";
+
+				List<String> actualSubPaths = getSubPathsIgnoringClassFilesEtc(pattern, pathPrefix);
+
+				assertThat(actualSubPaths)
+						.containsExactlyInAnyOrder("support/resource#test1.txt", "support/resource#test2.txt");
+			}
+
+			private List<String> getSubPathsIgnoringClassFilesEtc(String pattern, String pathPrefix) throws IOException {
+				return Arrays.stream(resolver.getResources(pattern))
+						.map(resource -> getPath(resource).replaceFirst(pathPrefix, ""))
+						.filter(name -> !name.endsWith(".class"))
+						.filter(name -> !name.endsWith(".kt"))
+						.filter(name -> !name.endsWith(".factories"))
+						.distinct()
+						.sorted()
+						.collect(Collectors.toList());
+			}
+
+			@Test
+			void usingFileProtocolWithoutWildcardInPatternAndEndingInSlashStarStar()  {
+				Path testResourcesDir = Paths.get("src/test/resources").toAbsolutePath();
+				String pattern = String.format("file:%s/scanned-resources/**", testResourcesDir);
+				String pathPrefix = ".+?resources/";
+
+				// We do NOT find "scanned-resources" if the pattern ENDS with "/**" AND does NOT otherwise contain a wildcard.
 				assertExactFilenames(pattern, "resource#test1.txt", "resource#test2.txt");
-				assertExactSubPaths(pattern, pathPrefix, "resource#test1.txt", "resource#test2.txt");
+				assertExactSubPaths(pattern, pathPrefix, "scanned-resources/resource#test1.txt",
+						"scanned-resources/resource#test2.txt");
+			}
+
+			@Test
+			void usingFileProtocolWithWildcardInPatternAndEndingInSlashStarStar() {
+				Path testResourcesDir = Paths.get("src/test/resources").toAbsolutePath();
+				String pattern = String.format("file:%s/scanned*resources/**", testResourcesDir);
+				String pathPrefix = ".+?resources/";
+
+				// We DO find "scanned-resources" if the pattern ENDS with "/**" AND DOES otherwise contain a wildcard.
+				assertExactFilenames(pattern, "scanned-resources", "resource#test1.txt", "resource#test2.txt");
+				assertExactSubPaths(pattern, pathPrefix, "scanned-resources", "scanned-resources/resource#test1.txt",
+						"scanned-resources/resource#test2.txt");
 			}
 
 			@Test
 			void usingFileProtocolAndAssertingUrlAndUriSyntax() throws Exception {
-				Path testResourcesDir = Path.of("src/test/resources").toAbsolutePath();
+				Path testResourcesDir = Paths.get("src/test/resources").toAbsolutePath();
 				String pattern = "file:%s/scanned-resources/**/resource#test1.txt".formatted(testResourcesDir);
 				Resource[] resources = resolver.getResources(pattern);
 				assertThat(resources).hasSize(1);
@@ -174,6 +267,7 @@ class PathMatchingResourcePatternResolverTests {
 		try {
 			Resource[] resources = resolver.getResources(pattern);
 			List<String> actualNames = Arrays.stream(resources)
+					.peek(resource -> assertThat(resource.exists()).as(resource + " exists").isTrue())
 					.map(Resource::getFilename)
 					.sorted()
 					.toList();
@@ -220,7 +314,16 @@ class PathMatchingResourcePatternResolverTests {
 		// GraalVM native image which cannot support Path#toFile.
 		//
 		// See: https://github.com/spring-projects/spring-framework/issues/29243
-		return ((FileSystemResource) resource).getPath();
+		if (resource instanceof FileSystemResource fileSystemResource) {
+			return fileSystemResource.getPath();
+		}
+		try {
+			// Fall back to URL in case the resource came from a JAR
+			return resource.getURL().getPath();
+		}
+		catch (IOException ex) {
+			throw new UncheckedIOException(ex);
+		}
 	}
 
 }
